Fixed warnings:      [java] SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".      [java] SLF4J: Defaulting to no-operation (NOP) logger implementation      [java] SLF4J: See http://www.slf4j.org/codes.html#StaticLoggerBinder for further details.

--- a/build.gradle
+++ b/build.gradle
@@ -156,6 +156,7 @@ project(':jarjar-command') {
 	dependencies {
 		compile project(':jarjar-core')
 		compile 'net.sf.jopt-simple:jopt-simple:4.8'
+		compile 'org.slf4j:slf4j-simple:1.7.12'
 
 		testCompile project(':jarjar-core').sourceSets.test.output
 	}
